--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='myApp'>
   <head>
     <meta charset="utf-8">
     <title>Routing Example</title>
@@ -8,9 +8,10 @@
     <script src = "app.js"></script>
     <script src="controllers/registerController.js"></script>
     <script src="controllers/logincontroller.js"></script>
-    
+    <script src="controllers/CalcController.js" ></script>
+
   </head>
-  <body ng-app='myApp'>
+  <body >
     <div ui-view>
     </div>
   </body>
