--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="controllers/registerController.js"></script>
     <script src="controllers/logincontroller.js"></script>
     <script src="controllers/CalcController.js" ></script>
+    <script src="services/readJson.js" charset="utf-8"></script>
+      <script src="controllers/Staffcontroller.js"></script>
 
   </head>
   <body >
