--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="controllers/CalcController.js" ></script>
     <script src="services/readJson.js" charset="utf-8"></script>
       <script src="controllers/Staffcontroller.js"></script>
-
+      <script src="controllers/ReadJsonController.js" charset="utf-8"></script>
   </head>
   <body >
     <div ui-view>
