--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <script src="controllers/ReadJsonController.js" charset="utf-8"></script>
       <link rel="stylesheet" href="mobile.css">
       <script src="controllers/dashboardcontroller.js" charset="utf-8"></script>
+      <script src="controllers/DailogueController.js" charset="utf-8"></script>
   </head>
   <body >
     <div ui-view>
