--- a/Toggle.html
+++ b/Toggle.html
@@ -44,7 +44,7 @@ body {
 </div>
 
 <div id="main">
-  <span style="font-size:30px;cursor:pointer" onclick="toggle()">&#9776; Click Me!</span>
+  <span style="font-size:30px;cursor:pointer" ng-click="toggle()">&#9776; Click Me!</span>
 </div>
 
 <script>
